--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,12 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+
+
+
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
+
 dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     implementation('org.mariadb.jdbc:mariadb-java-client:2.7.4')
